module/web/mirror_website/static/css/style.css
/*
    ----- Theme colors -----
*/

:root {
    --primary_text_color: rgb(0,0,10);
    --secondary_text_color: rgb(245,245,255);
    --link_text_color: rgb(0,50,125);
    --primary_bg: white;
    --page_gradient: linear-gradient(
        rgb(255,255,255) 0%,
        rgb(245,245,250) 70%,
        rgb(235,235,240) 100%
    );
    --navbar_bg: rgb(0, 31, 26);
    --navbar_selected_bg: rgb(0,62,54);
    --icon_accent_color: rgb(0,62,54);
    --footer_bg: rgb(0, 31, 26);
    --card_border_color: rgba(0,0,0,0.15);
}

[color_theme="dark"] {
    --primary_text_color: rgb(245,245,255);
    --secondary_text_color: rgb(245,245,255);
    --link_text_color: rgb(180,220,255);
    --primary_bg: rgb(12,13,16);
    --page_gradient: linear-gradient(
        rgb(15,15,20) 0%,
        rgb(10,10,12) 70%,
        rgb(5,5,7) 100%
    );
    --navbar_bg: rgb(0, 31, 26);
    --navbar_selected_bg: rgb(0,62,54);
    --icon_accent_color: rgb(0,126,108);
    --footer_bg: rgb(0, 31, 26);
    --card_border_color: rgba(255,255,255,0.15);
}



/*
    ----- Overrides -----
*/

* {
    margin: 0;
    padding: 0;
}

body {
    box-sizing: border-box;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    background: var(--page_gradient);
    background-attachment: fixed;
    background-size: cover;
    color: var(--primary_text_color);
}

a {
    color: var(--link_text_color);
}

a:hover {
    cursor: pointer;
}

hr {
    margin: 2.5rem 0;
}

h1 {
    font-size: 2rem;
}

h2 {
    font-size: 1.4rem;
}

h3 {
    font-size: 1.2rem;
}


/*
    ----- Navbar -----
*/

nav {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    z-index: 100;
    background-color: var(--navbar_bg);
    color: white;
    box-sizing: border-box;
    display: flex;
    flex-flow: row wrap;
    margin: 0;
    padding: 0;
    box-shadow: 0px 4px 8px rgba(0,0,0,0.5);
}

nav>a {
    font-family: sans-serif;
    color: white;
    text-decoration: none;
    margin: 0;
    transition-duration: 200ms;
    padding: 1rem 1.5rem;
    border-bottom: 1px solid transparent;
    line-height: 1.2em;
}

nav>a:hover {
    border-bottom: 1px solid white;
}


nav>a.active {
    background: var(--navbar_selected_bg);
    border-bottom: 2px solid rgb(255,255,255);
}

.navbar_spacer {
    height: 3.2rem;
    border-bottom: 2px solid transparent;
}

nav>.expand_button {
    margin: 1rem;
    color: white;
    padding: 0.4rem 0.8rem;
    box-sizing: border-box;
    border: 1px solid white;
    border-radius: 0.2rem;
    display: none;
    transition-duration: 200ms;
}

nav>.expand_button:hover {
    cursor: pointer;
    background-color: white;
    color: black;
}

@media screen and (max-width: 600px) {
    nav>.expand_button {
        display: initial;
    }

    nav>a {
        display: none;
    }

    nav.expanded>.expand_button {
        margin-bottom: 1rem;
    }

    nav.expanded>a {
        display: initial;
        width: 100%;
    }
}



/*
    ----- Headers -----
*/

section {
    scroll-margin-top: 5rem;
}

section>header {
    text-align: center;
    margin-top: 2rem;
    margin-bottom: 2rem;
}

section>header>h1 {
    font-size: 2.5rem;
}

header.banner {
    width: 100%;
    margin: 0;
    padding: 10rem 0;
    box-sizing: border-box;
    background-image: url(../img/banner.jpg);
    background-position: center;
    background-size: cover;
    box-shadow: 0px 4px 8px rgba(0,0,0,0.5);
}

header.banner>h1 {
    color: white;
    text-align: center;
    text-shadow: 2px 2px 4px rgba(0,0,0,0.5);
    color: var(--secondary_text_color);
    font-size: 3rem;
}



/*
    ----- Content -----
*/

main, header.page_header {
    box-sizing: border-box;
    width: 100%;
    max-width: 75rem;
    padding: 1rem;
    margin-left: auto;
    margin-right: auto;
}

main>div.content {
    margin: 1rem auto;
}

.icon {
    color: var(--icon_accent_color);
}



/*
    ----- Footer -----
*/

body>footer {
    width: 100%;
    margin: 64px 0 0 0;
    padding: 64px 0;
    box-shadow: 0px -4px 8px rgba(0,0,0,0.5);
    background: var(--footer_bg);
    box-sizing: border-box;
}

body>footer>div.content {
    width: 100%;
    max-width: 75rem;
    color: var(--secondary_text_color);
    text-align: center;
    margin-left: auto;
    margin-right: auto;
}

.footer_link {
    color: inherit;
    font-weight: bold;
}



/*
    ----- Map legend -----
*/

#map_legend {
    position: fixed;
    top: 0;
    left: 0;
    width: 150px;
    z-index: 99;
    background: rgba(50,50,50,0.4);
    color: white;
    box-sizing: border-box;
    margin: 100px 0 0 8px;
    padding: 8px;
    overflow-x: hidden;
    overflow-y: scroll;
    text-wrap: nowrap;
    font-size: 0.8rem;
    box-shadow: 0px 4px 8px rgba(0,0,0,0.5);
    scrollbar-width: none;
}



/*
    ----- Content Cards -----
*/

.card_container {
    box-sizing: border-box;
    margin: 0 auto;
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
    grid-gap: 1rem;
}

article.card {
    padding: 1rem;
    box-sizing: border-box;
    border-radius: 0.5rem;
    background-color: var(--primary_bg);
    border: 1px solid var(--card_border_color);
    display: grid;
    grid-template-rows: 10rem max-content 1fr;
    box-shadow: 0.25rem 0.25rem 0.5rem rgba(0,0,0,0.5);
}

article.card.noimg {
    grid-template-rows: max-content 1fr max-content;
}

article.card>header {
    padding: 0.75rem 0;
}

article.card>img {
    box-sizing: border-box;
    object-fit: contain;
    object-position: center;
    width: 100%;
    height: 100%;
    max-height: 10rem;
    border-radius: 0.5rem;
}



/*
    ----- Expandable sections -----
*/

.extra {
    display: none;
}

.expanded .extra {
    display: block;
}

.expanded button.expand {
    display: none;
}

button.collapse {
    display: none;
}

.expanded button.collapse {
    display: initial;
}

